--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               </a>
             <div class="profile">
                 <h1 class="site-title abel uppercase text-center">Web Designer <span>Nagisa Maeda</span></h1>
-                <img src="./images/img_9065.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
+                <img src="./img/img_9065.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
                 <p>三重県在住でWeb関連の仕事に就いている、Nagisaです。これまでアパレル業界に勤めていましたが
                 全く異なる職種にチャレンジしてみたく、以前から興味があったWeb制作についてオンラインスクールで学び、 Webデザイナーへと転職活動中です。
                 これからもWeb制作の技術や知識を身につけて、たくさんの要望に対応できるデザイナーになりたいと思っています。</p>
