--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
      <head>
         <meta charset="utf-8">
         <title>Web Designer - Nagisa Maeda </title>
-        <meta name="description" content="Webデザイナー Nagisa Maedaのポートフォリオサイトです。東京を中心に活動しています。">
+        <meta name="description" content="Webデザイナー Nagisa Maedaのポートフォリオサイトです。">
         <meta name="keywords" content="Web, デザイン, デザイナー, ポートフォリオ, Web制作">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
         <link rel="stylesheet" href="./css/style.css">
@@ -15,140 +15,152 @@
               <i aria-label="お問い合わせ" class="fa fa-envelope-o"></i>
               </a>
             <div class="profile">
-                <h1 class="site-title abel uppercase text-center">Web Designer <span>Nagisa Maeda</span></h1>
-                <img src="./images/img_9065.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
-                <p>三重県在住でWeb関連の仕事に就いている、Nagisaです。これまでアパレル業界に勤めていましたが
-                全く異なる職種にチャレンジしてみたく、以前から興味があったWeb制作についてオンラインスクールで学び、 Webデザイナーへと転職活動中です。
-                これからもWeb制作の技術や知識を身につけて、たくさんの要望に対応できるデザイナーになりたいと思っています。</p>
+                <h1 class="site-title abel uppercase text-center">Web Designer<span>Nagisa Maeda</span></h1>
+                <br><br>
+                <img src="./images/profile3.jpg" alt="プロフィール写真">
             </div>
         </header>
         <main>
             <section id="skills">
-        <h2 class="text-center">Skills</h2>
-        <div class="container">
-            <div class="skill-box">
-                <i class="fa fa-picture-o" aria-hidden="true"></i>
-                <h3 class="text-center">Photoshop</h3>
-                <p>Photoshopで写真加工が出来ます。現在は楽天やYahoo!の商品画像の加工や修正を
-                行っています。illustratorも現在勉強中です。</p>
-            </div>
-            <div class="skill-box">
-                <i class="fa fa-tint" aria-hidden="true"></i>
-                <h3 class="text-center">color</h3>
-                <p>色彩検定２級を取得しているため商品のイメージや売上アップを狙い、消費者の目を引く色を提案する事が出来ます。</p>
-            </div>
-            <div class="skill-box">
-                <i class="fa fa-users" aria-hidden="true"></i>
-                <h3 class="text-center">Communication</h3>
-                <p>前職でアパレル業界の接客業に長く携ってきた為、会話の中から相手が求めている事を引き出して、それに対して適切な対応を取る事が出来ます。</p>
-            </div>
-        </div>
-    </section>
+       　　　　 <h2 class="text-center">Skills</h2>
+        　　       <article class="post_cont">
+                   <h3 class="post_title">HTML5/CSS3</h3>
+                     <p class="post_text">基礎知識はございます。前職ではDreamweaverで簡単なコーディングを担当しておりました。また、レスポンシブwebデザインについてもwebスクールで勉強をしております。サイトを作る際は”シンプル”に”読みやすく””ユーザー目線で使いやすく”を重点に置くことが大事だと思っています。</p>
+                 </article>
+            　  <article class="post_cont">
+                   <h3 class="post_title">photoshop</h3>
+                     <p class="post_text">前職でバナーやアイコンを作成しておりました。切り抜き作業や明るさ調節、基本操作は可能です。デザインにつきましては様々なサイトを閲覧し勉強に励んでおります。</p>
+                </article>
+                <article class="post_cont">
+                   <h3 class="post_title">JavaScript</h3>
+                     <p class="post_text">Webページに「動き」をもたらすために、JavaScriptは欠かせないため独学で勉強しております。また、ユーザーの印象に　残るようなWebサイトの制作を実現するために、jQueryの学習にも取り組んでおります。</p>
+　　　　      　</article>
+                <article class="post_cont">
+                   <h3 class="post_title">Word Press</h3>
+                     <p class="post_text">在宅ワークでWord Pressを使用し記事のコーディング、投稿を行っておりました。また自分自身のブログ用として使用していた事もありテーマの変更など可能です。</p>
+                </article>
+                 <article class="post_cont">
+                   <h3 class="post_title">illustrator</h3>
+                     <p class="post_text">前職で画像加工の際に文字載せで使用しました。Web制作においてillustratorは必須のため、ロゴ・アイコンなどのイラストパーツを作れるデザイン力を身に付けて行きます。</p>
+                </article>
+            </section>
+            <br>
+            <section id="works_1">
+        <h2 class="text-center">架空サイト</h2>
+            <h3 class="post_text">HTML/CSSの知識と理解力を深めるために架空のホームページを制作致しました。</h3>
+            <p><img src="./images/kichen.jpg" alt="写真" align="left"><br>
+　　　　　　　　<center>
+　　　　　　　　<ol>
+　　　　　　　　　<li>ストーリー</li>
+　　　　　　　　　<li>20代〜30代の一人暮らしの独身女性。OL勤務で平日は会社の同僚や友人と外食多めの生活。甘い物が好きで休日は恋人とおしゃれなカフェなどへ行きSNSへの投稿を頻繁に行う。恋人と結婚も視野に入れたお付き合いをしているため、健康を意識した料理の勉強を始める方向けの料理教室のホームページを製作しました。</li>
+　　　　　　　　</ol>
+　　　　　　　　</center>
+            <br clear="left">
+            </p>
+            <br><br>
             <section id="works">
         <h2 class="text-center">Works</h2>
+                 <center>
+               　<ol>
+                    <li>前職で作成したバナーを集めました。 </li>
+　　　　　　　      <li>ハンドメイド用品、アクセサリーパーツ販売の「BLAZE」は楽天ショップへリンクが繋がっております。</li>
+　　　　　　　      <li>まとめサイト「メンジム」にて投稿した記事が閲覧可能です。個性的な記事を書いておりましたのでご覧頂けますと幸いです。</li>
+　　　　　　　   </ol>
+　　　　　　　   </center>
         <div class="works-box">
-            <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+            <a href="https://www.rakuten.ne.jp/gold/blaze-japan/" target="_blank">
+                <img src="./images/top_banner_motif.jpg" alt="ECサイトバナーデザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
-                        <h3>株式会社きらめき コーポレートサイト</h3>
-                        <small>2016.04.20</small>
+                        <h3>BLAZE</h3>
+                        <span class="button-readmore">ECサイトへ</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="works-box">
+            <a href="https://www.rakuten.ne.jp/gold/blaze-japan/" target="_blank">
+                <img src="./images/top_banner_artflower.jpg" alt="ECサイトバナーデザイン">
+                <div class="works-box-inner">
+                    <div class="text-center">
+                        <h3>BLAZE</h3>
+                        <span class="button-readmore">ECサイトへ</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="works-box">
+            <a href=https://www.rakuten.ne.jp/gold/blaze-japan/" target="_blank">
+                <img src="./images/top_banner_pirce.jpg" alt="ECサイトバナーデザイン">
+                <div class="works-box-inner">
+                    <div class="text-center">
+                        <h3>BLAZE</h3>
+                        <span class="button-readmore">ECサイトへ</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="works-box">
+            <a href=https://www.rakuten.ne.jp/gold/blaze-japan/" target="_blank">
+                <img src="./images/beads.jpg" alt="ECサイトバナーデザイン">
+                <div class="works-box-inner">
+                    <div class="text-center">
+                        <h3>BLAZE</h3>
+                        <span class="button-readmore">ECサイトへ</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="works-box">
+            <a href="https://www.rakuten.ne.jp/gold/blaze-japan/" target="_blank">
+                <img src="./images/top_banner_button.jpg" alt="ECサイトバナーデザイン">
+                <div class="works-box-inner">
+                    <div class="text-center">
+                        <h3>BLAZE</h3>
+                        <span class="button-readmore">ECサイトへ</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="works-box">
+            <a href="https://www.rakuten.ne.jp/gold/blaze-japan/" target="_blank">
+                <img src="./images/top_banner_plabutton.jpg" alt="ECサイトバナーデザイン">
+                <div class="works-box-inner">
+                    <div class="text-center">
+                        <h3>BLAZE</h3>
+                        <span class="button-readmore">ECサイトへ</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="works-box">
+            <a href="https://mengym.net/moteo/54698" target="_blank">
+                <img src="./images/kamigata.jpg" alt="WordPressブログ">
+                <div class="works-box-inner">
+                    <div class="text-center">
+                        <h3>メンジム</h3>
                         <span class="button-readmore">Read More</span>
                     </div>
                 </div>
             </a>
         </div>
         <div class="works-box">
-            <a href="#">
-                <img src="./images/img_work_card.jpg" alt="Nagisa Maeda様 名刺デザイン">
+            <a href="https://mengym.net/trouble/53811" target="_blank">
+                <img src="./images/nikibi.jpg" alt="WordPressブログ">
                 <div class="works-box-inner">
                     <div class="text-center">
-                        <h3>Nagisa Maeda様 名刺</h3>
-                        <small>2016.04.20</small>
+                         <h3>メンジム</h3>
                         <span class="button-readmore">Read More</span>
                     </div>
                 </div>
             </a>
         </div>
         <div class="works-box">
-            <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+            <a href="https://mengym.net/trouble/54271" target="_blank">
+                <img src="./images/kuma.jpg" alt="WordPressブログ">
                 <div class="works-box-inner">
                     <div class="text-center">
-                        <h3>ブログデザイン</h3>
-                        <small>2016.04.20</small>
-                        <span class="button-readmore">Read More</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="works-box">
-            <a href="#">
-                <img src="./images/img_work_card.jpg" alt="Nagisa Maeda 様 名刺デザイン">
-                <div class="works-box-inner">
-                    <div class="text-center">
-                        <h3>Nagisa Maeda 様 名刺</h3>
-                        <small>2016.04.20</small>
-                        <span class="button-readmore">Read More</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="works-box">
-            <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
-                <div class="works-box-inner">
-                    <div class="text-center">
-                        <h3>ブログデザイン</h3>
-                        <small>2016.04.20</small>
-                        <span class="button-readmore">Read More</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="works-box">
-            <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
-                <div class="works-box-inner">
-                    <div class="text-center">
-                        <h3>株式会社きらめき コーポレートサイト</h3>
-                        <small>2016.04.20</small>
-                        <span class="button-readmore">Read More</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="works-box">
-            <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
-                <div class="works-box-inner">
-                    <div class="text-center">
-                        <h3>ブログデザイン</h3>
-                        <small>2016.04.20</small>
-                        <span class="button-readmore">Read More</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="works-box">
-            <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
-                <div class="works-box-inner">
-                    <div class="text-center">
-                        <h3>株式会社きらめき コーポレートサイト</h3>
-                        <small>2016.04.20</small>
-                        <span class="button-readmore">Read More</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="works-box">
-            <a href="#">
-                <img src="./images/img_work_card.jpg" alt="Nagisa Maeda 様 名刺デザイン">
-                <div class="works-box-inner">
-                    <div class="text-center">
-                        <h3>Nagisa Maeda 様 名刺</h3>
-                        <small>2016.04.20</small>
+                         <h3>メンジム</h3>
                         <span class="button-readmore">Read More</span>
                     </div>
                 </div>
@@ -158,9 +170,9 @@
         <section id="contact">
         <h2 class="text-center">Contact</h2>
         <ul>
-            <li><a href="mailto:m.n.a.07030@gmail.com"><i aria-label="メール" class="fa fa-envelope-o"></i></a></li>
-            <li class="github"><a href="https://github.com/nagisa-maeda"><i aria-label="GitHub" class="fa fa-github"></i></a></li>
-            <li class="skype"><a href="https://dova-s.jp/bgm/play10310.html"><i class="fa fa-music" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i aria-label="メール" class="fa fa-envelope-o"></i></a></li>
+            <li class="github"><a href="#"><i aria-label="GitHub" class="fa fa-github"></i></a></li>
+            <li class="skype"><a href="#"><i class="fa fa-music" aria-hidden="true"></i></a></li>
         </ul>
     </section>
         </main>
