lessen6_kadai_portfolio

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
                    <h3 class="post_title">illustrator</h3>
                      <p class="post_text">前職で画像加工の際に文字載せで使用しました。Web制作においてillustratorは必須のため、ロゴ・アイコンなどのイラストパーツを作れるデザイン力を身に付けて行きます。</p>
                 </article>
+                <article class="post_cont">
+                   <h3 class="post_title">cacoo</h3>
+                     <p class="post_text">現在のWebページのワイヤーフレームを設計致しました。下記の埋込リンクから閲覧となっております。</p>
+                     <iframe src="https://cacoo.com/diagrams/5ra2vJyCekYEUkWj/view?si=14BFC&w=400&h=300" width="402" height="100" frameborder="0" scrolling="no" name="cacoo"></iframe>
+                </article>
             </section>
             <br>
             <section id="works_1">
