lessen6_kadai_portfolio

--- a/index.html
+++ b/index.html
@@ -10,69 +10,65 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-      <header>
-          <a href="#contact" class="button-contact">
-              <i aria-label="お問い合わせ" class="fa fa-envelope-o"></i>
-              </a>
+      <header>  
             <div class="profile">
-                <h1 class="site-title abel uppercase text-center">Web Designer<span>Nagisa Maeda</span></h1>
-                <br><br>
-                <img src="./images/profile3.jpg" alt="プロフィール写真">
-            </div>
-        </header>
-        <main>
+            <h1 class="site-title abel uppercase text-center">Web Designer<span>Nagisa Maeda</span></h1><br><br><br><br>
+           <p><img src="./images/pan1.jpg" alt="写真2" style="float:left;">三重県在住のWebデザイナーを目指している、前田なぎさです。<br><br>現在は<span style="background-color:#ffc0cb">Web製作</span>についてオンラインスクールで学習に励んでおります。<br><br>これからさらにWeb製作の技術や知識を身につけて、Webサイト運用やアフターフォロー、<br><br>問題解決のアドバイスもできる<span style="background-color:#ffc0cb">Webデザイナー</span>になりたいと考えております。<br><br><br>1985年生まれ/34歳<br><br>趣味<br>サッカー観戦/live/音楽鑑賞/<br>ネットショッピング/ヨガ/水族館巡り<br><br></p>
+           </div>
+　　　</header>
+   <main>
             <section id="skills">
        　　　　 <h2 class="text-center">Skills</h2>
         　　       <article class="post_cont">
                    <h3 class="post_title">HTML5/CSS3</h3>
-                     <p class="post_text">基礎知識はございます。前職ではDreamweaverで簡単なコーディングを担当しておりました。また、レスポンシブwebデザインについてもwebスクールで勉強をしております。サイトを作る際は”シンプル”に”読みやすく””ユーザー目線で使いやすく”を重点に置くことが大事だと思っています。</p>
+                     <p class="post_text">基礎知識はございます。ECモールの運営業務に携わっていた時に<span style="background-color:#ffc0cb">Dreamweaver</span>を使用し、自社ECサイトの簡単なコーディングや修正を担当しておりました。<br>また、レスポンシブwebデザインについてもwebスクールで勉強をしております。<br>サイトを作る際は<span style="background-color:#ffc0cb">”シンプル”に”読みやすく””ユーザー目線</span>で使いやすく”を重点に置くことが大事だと思っています。</p>
                  </article>
             　  <article class="post_cont">
                    <h3 class="post_title">photoshop</h3>
-                     <p class="post_text">前職でバナーやアイコンを作成しておりました。切り抜き作業や明るさ調節、基本操作は可能です。デザインにつきましては様々なサイトを閲覧し勉強に励んでおります。</p>
+                     <p class="post_text">切り抜き作業や明るさ調節、基本操作は可能です。ECモール出店用に<span style="background-color:#ffc0cb">新商品発売のバナーやアイコンの作成</span>をしておりました。<br>デザインにつきましては様々なサイトを閲覧し勉強に励んでおります。</p>
                 </article>
                 <article class="post_cont">
                    <h3 class="post_title">JavaScript</h3>
-                     <p class="post_text">Webページに「動き」をもたらすために、JavaScriptは欠かせないため独学で勉強しております。また、ユーザーの印象に　残るようなWebサイトの制作を実現するために、jQueryの学習にも取り組んでおります。</p>
+                     <p class="post_text">実務経験はありませんが、ユーザーの印象に残るようなWebサイトの制作を実現するために独学で勉強しております。<br>また<span style="background-color:#ffc0cb">jQueryの学習</span>にも取り組んでおります。</p>
 　　　　      　</article>
                 <article class="post_cont">
                    <h3 class="post_title">Word Press</h3>
-                     <p class="post_text">在宅ワークでWord Pressを使用し記事のコーディング、投稿を行っておりました。また自分自身のブログ用として使用していた事もありテーマの変更など可能です。</p>
+                     <p class="post_text">在宅ワークでまとめサイト内の<span style="background-color:#ffc0cb">ブログ記事のコーディング、投稿</span>を行っておりましたので基本操作は可能です。<br>また現在WebスクールにてPHPについても学習しております。</p>
                 </article>
                  <article class="post_cont">
                    <h3 class="post_title">illustrator</h3>
-                     <p class="post_text">前職で画像加工の際に文字載せで使用しました。Web制作においてillustratorは必須のため、ロゴ・アイコンなどのイラストパーツを作れるデザイン力を身に付けて行きます。</p>
+                     <p class="post_text">画像加工の際に文字載せで使用しましたが実務は経験不足です。Web制作においてillustratorは必須のため、ロゴ・アイコンなどのイラストパーツを作れる<span style="background-color:#ffc0cb">デザイン力を身に付けて行きます。</span></p>
                 </article>
                 <article class="post_cont">
                    <h3 class="post_title">cacoo</h3>
-                     <p class="post_text">現在のWebページのワイヤーフレームを設計致しました。下記の埋込リンクから閲覧となっております。</p>
+                     <p class="post_text">現在のWebページを製作するにあたり、まずは<span style="background-color:#ffc0cb">ワイヤーフレーム設計</span>から始めコーディングまで行いました。<br><span style="background-color:#ffc0cb">下記の埋込リンクから閲覧可能</span>となっております。</p>
                      <iframe src="https://cacoo.com/diagrams/5ra2vJyCekYEUkWj/view?si=14BFC&w=400&h=300" width="402" height="100" frameborder="0" scrolling="no" name="cacoo"></iframe>
                 </article>
             </section>
             <br>
-            <section id="works_1">
-        <h2 class="text-center">架空サイト</h2>
-            <h3 class="post_text">HTML/CSSの知識と理解力を深めるために架空のホームページを制作致しました。</h3>
-            <p><img src="./images/kichen.jpg" alt="写真" align="left"><br>
-　　　　　　　　<center>
-　　　　　　　　<ol>
-　　　　　　　　　<li>ストーリー</li>
-　　　　　　　　　<li>20代〜30代の一人暮らしの独身女性。OL勤務で平日は会社の同僚や友人と外食多めの生活。甘い物が好きで休日は恋人とおしゃれなカフェなどへ行きSNSへの投稿を頻繁に行う。恋人と結婚も視野に入れたお付き合いをしているため、健康を意識した料理の勉強を始める方向けの料理教室のホームページを製作しました。</li>
-　　　　　　　　</ol>
-　　　　　　　　</center>
+            <section id="worksh">
+    <h2 class="text-center">KITCHENサイト</h2>
+</div><br>
+    <img src="./images/kichen.jpg" alt="写真" width="500px">
+                         <p>HTML5/CSS3の知識と理解力を深めるためにホームページを制作致しました。<br><br>
+                         <spans>ストーリー</spans><br>
+                         20代〜30代の一人暮らしの独身女性。OL勤務で平日は会社の同僚や友人と外食多めの生活。甘い物が好きで休日は恋人とおしゃれなカフェなどへ行きSNSへの投稿を頻繁に行う。恋人と結婚も視野に入れたお付き合いをしているため、料理教室を探している。<br><br>
+                         <spans>工夫したポイント</spans><br>
+                         配色はベースカラーをホワイトにする事で「清潔」「始まり」「気分を一新」する雰囲気を出し、サブカラーのオレンジで「親しみ」「明るい」といったポジティブな印象を持たせました。初めてサイトを訪れた方に「見やすい・使いやすい」レイアウトを考え、メニューボタンを上部に配置し、印象的な写真を大きめに配置した事で料理教室での楽しいイメージを持たせるように意図しました。</p>
             <br clear="left">
-            </p>
-            <br><br>
+            <br>
             <section id="works">
-        <h2 class="text-center">Works</h2>
-                 <center>
-               　<ol>
-                    <li>前職で作成したバナーを集めました。 </li>
-　　　　　　　      <li>ハンドメイド用品、アクセサリーパーツ販売の「BLAZE」は楽天ショップへリンクが繋がっております。</li>
-　　　　　　　      <li>まとめサイト「メンジム」にて投稿した記事が閲覧可能です。個性的な記事を書いておりましたのでご覧頂けますと幸いです。</li>
-　　　　　　　   </ol>
-　　　　　　　   </center>
-        <div class="works-box">
+                <h2 class="text-center">Works</h2>
+                 <div class="box19">
+                     <p>
+                     <ol>
+                        <li>ECモール出店で作成したバナーを集めました。<br>写真加工が行いやすいようにイメージしながらレイアウトを考え、写真撮影を行いました。</li>
+                        <li>ハンドメイド用品、アクセサリーパーツ販売の<span style="background-color:#ffc0cb">「BLAZE」は楽天ショップ</span>へリンクが繋がっております。</li><br><br>
+                        <li>まとめサイト<span style="background-color:#ffc0cb">「メンジム」にて投稿した記事</span>が閲覧可能です。<br>ペルソナ設定もしっかりとあり・SEO対策のためのキーワード５つ、ブログカードの挿入、アドセンスの貼り付け、<span style="background-color:#ffc0cb">１記事２５００文字〜</span>と個性的な記事を書いておりましたのでご覧頂けますと幸いです。</li><br><br>
+                     </ol>
+                     </p>
+                 </div><br>
+                   <div class="works-box">
             <a href="https://www.rakuten.ne.jp/gold/blaze-japan/" target="_blank">
                 <img src="./images/top_banner_motif.jpg" alt="ECサイトバナーデザイン">
                 <div class="works-box-inner">
@@ -173,11 +169,11 @@
         </div>
     </section>
         <section id="contact">
+            <br>
         <h2 class="text-center">Contact</h2>
         <ul>
             <li><a href="#"><i aria-label="メール" class="fa fa-envelope-o"></i></a></li>
             <li class="github"><a href="#"><i aria-label="GitHub" class="fa fa-github"></i></a></li>
-            <li class="skype"><a href="#"><i class="fa fa-music" aria-hidden="true"></i></a></li>
         </ul>
     </section>
         </main>
