lessen6_kadai_portfolio

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <body>
       <header>  
             <div class="profile">
-            <h1 class="site-title abel uppercase text-center">Web Designer<span>Nagisa Maeda</span></h1><br><br><br><br>
-           <p><img src="./images/pan1.jpg" alt="写真2" style="float:left;">三重県在住のWebデザイナーを目指している、前田なぎさです。<br><br>現在は<span style="background-color:#ffc0cb">Web製作</span>についてオンラインスクールで学習に励んでおります。<br><br>これからさらにWeb製作の技術や知識を身につけて、Webサイト運用やアフターフォロー、<br><br>問題解決のアドバイスもできる<span style="background-color:#ffc0cb">Webデザイナー</span>になりたいと考えております。<br><br><br>1985年生まれ/34歳<br><br>趣味<br>サッカー観戦/live/音楽鑑賞/<br>ネットショッピング/ヨガ/水族館巡り<br><br></p>
+            <h1 class="site-title abel uppercase text-center">Web Designer<span>Nagisa Maeda</span></h1><br><br>
+             <div align="center">
+              <img src="./images/newprofile.jpg" alt="写真2">
+             </div>
            </div>
 　　　</header>
    <main>
@@ -35,10 +37,6 @@
                    <h3 class="post_title">Word Press</h3>
                      <p class="post_text">在宅ワークでまとめサイト内の<span style="background-color:#ffc0cb">ブログ記事のコーディング、投稿</span>を行っておりましたので基本操作は可能です。<br>また現在WebスクールにてPHPについても学習しております。</p>
                 </article>
-                 <article class="post_cont">
-                   <h3 class="post_title">illustrator</h3>
-                     <p class="post_text">画像加工の際に文字載せで使用しましたが実務は経験不足です。Web制作においてillustratorは必須のため、ロゴ・アイコンなどのイラストパーツを作れる<span style="background-color:#ffc0cb">デザイン力を身に付けて行きます。</span></p>
-                </article>
                 <article class="post_cont">
                    <h3 class="post_title">cacoo</h3>
                      <p class="post_text">現在のWebページを製作するにあたり、まずは<span style="background-color:#ffc0cb">ワイヤーフレーム設計</span>から始めコーディングまで行いました。<br><span style="background-color:#ffc0cb">下記の埋込リンクから閲覧可能</span>となっております。</p>
@@ -50,7 +48,7 @@
     <h2 class="text-center">KITCHENサイト</h2>
 </div><br>
     <img src="./images/kichen.jpg" alt="写真" width="500px">
-                         <p>HTML5/CSS3の知識と理解力を深めるためにホームページを制作致しました。<br><br>
+                         <p>HTML5/CSS3の知識と理解力を深めるためにWEBスクールの課題でホームページを制作致しました。<br><br>
                          <spans>ストーリー</spans><br>
                          20代〜30代の一人暮らしの独身女性。OL勤務で平日は会社の同僚や友人と外食多めの生活。甘い物が好きで休日は恋人とおしゃれなカフェなどへ行きSNSへの投稿を頻繁に行う。恋人と結婚も視野に入れたお付き合いをしているため、料理教室を探している。<br><br>
                          <spans>工夫したポイント</spans><br>
@@ -62,78 +60,30 @@
                  <div class="box19">
                      <p>
                      <ol>
-                        <li>ECモール出店で作成したバナーを集めました。<br>写真加工が行いやすいようにイメージしながらレイアウトを考え、写真撮影を行いました。</li>
-                        <li>ハンドメイド用品、アクセサリーパーツ販売の<span style="background-color:#ffc0cb">「BLAZE」は楽天ショップ</span>へリンクが繋がっております。</li><br><br>
+                        <li>前職の株式会社「BLAZE」にてECモール出店で作成した<span style="background-color:#ffc0cb">バナー</span>を集めました。<br>写真加工が行いやすいようにイメージしながらレイアウトを考え、写真撮影を行いました。</li><br><br>
                         <li>まとめサイト<span style="background-color:#ffc0cb">「メンジム」にて投稿した記事</span>が閲覧可能です。<br>ペルソナ設定もしっかりとあり・SEO対策のためのキーワード５つ、ブログカードの挿入、アドセンスの貼り付け、<span style="background-color:#ffc0cb">１記事２５００文字〜</span>と個性的な記事を書いておりましたのでご覧頂けますと幸いです。</li><br><br>
                      </ol>
                      </p>
                  </div><br>
-                   <div class="works-box">
-            <a href="https://www.rakuten.ne.jp/gold/blaze-japan/" target="_blank">
-                <img src="./images/top_banner_motif.jpg" alt="ECサイトバナーデザイン">
-                <div class="works-box-inner">
-                    <div class="text-center">
-                        <h3>BLAZE</h3>
-                        <span class="button-readmore">ECサイトへ</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="works-box">
-            <a href="https://www.rakuten.ne.jp/gold/blaze-japan/" target="_blank">
-                <img src="./images/top_banner_artflower.jpg" alt="ECサイトバナーデザイン">
-                <div class="works-box-inner">
-                    <div class="text-center">
-                        <h3>BLAZE</h3>
-                        <span class="button-readmore">ECサイトへ</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="works-box">
-            <a href=https://www.rakuten.ne.jp/gold/blaze-japan/" target="_blank">
-                <img src="./images/top_banner_pirce.jpg" alt="ECサイトバナーデザイン">
-                <div class="works-box-inner">
-                    <div class="text-center">
-                        <h3>BLAZE</h3>
-                        <span class="button-readmore">ECサイトへ</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="works-box">
-            <a href=https://www.rakuten.ne.jp/gold/blaze-japan/" target="_blank">
-                <img src="./images/beads.jpg" alt="ECサイトバナーデザイン">
-                <div class="works-box-inner">
-                    <div class="text-center">
-                        <h3>BLAZE</h3>
-                        <span class="button-readmore">ECサイトへ</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="works-box">
-            <a href="https://www.rakuten.ne.jp/gold/blaze-japan/" target="_blank">
-                <img src="./images/top_banner_button.jpg" alt="ECサイトバナーデザイン">
-                <div class="works-box-inner">
-                    <div class="text-center">
-                        <h3>BLAZE</h3>
-                        <span class="button-readmore">ECサイトへ</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="works-box">
-            <a href="https://www.rakuten.ne.jp/gold/blaze-japan/" target="_blank">
-                <img src="./images/top_banner_plabutton.jpg" alt="ECサイトバナーデザイン">
-                <div class="works-box-inner">
-                    <div class="text-center">
-                        <h3>BLAZE</h3>
-                        <span class="button-readmore">ECサイトへ</span>
-                    </div>
-                </div>
-            </a>
-        </div>
+                     <div class="works-box">
+                     <img src="./images/top_banner_motif.jpg" alt="ECサイトバナーデザイン">
+                     </div>
+                     <div class="works-box">
+                     <img src="./images/top_banner_artflower.jpg" alt="ECサイトバナーデザイン">
+                     </div>
+                     <div class="works-box">
+                     <img src="./images/top_banner_pirce.jpg" alt="ECサイトバナーデザイン">
+                     </div>
+                     <div class="works-box">
+                     <img src="./images/beads.jpg" alt="ECサイトバナーデザイン">
+                     </div>
+                     <div class="works-box">
+                     <img src="./images/top_banner_button.jpg" alt="ECサイトバナーデザイン">
+                     </div>
+                     <div class="works-box">
+                     <img src="./images/top_banner_plabutton.jpg" alt="ECサイトバナーデザイン">
+                     </div>
+                 </div>
         <div class="works-box">
             <a href="https://mengym.net/moteo/54698" target="_blank">
                 <img src="./images/kamigata.jpg" alt="WordPressブログ">
